--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,6 +39,22 @@
 
 /* header end */
 
+/* footer start */
+footer {
+  width: 100%;  
+  height: 20px;
+  position: relative;
+  border-top:1px solid #434343;
+  margin-top: 'auto';
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+
+
+/* footer end */
+
 /* home start */
 
 .home {
