coverletter_write 기업명선택바를 글제목위로 수정

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -103,12 +103,14 @@ footer {
 .company_basic_list {
   position: fixed;
   height: 100%;
+  width: 100%;
   overflow: scroll;
 }
 
 .user_list {
   position: fixed;
   height: 100%;
+  width: 100%;
   overflow: scroll;
 }
 /*Admin end*/
