--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -329,6 +329,8 @@ footer {
   width: 100%;
   overflow: scroll;
 }
+
+/*user start*/
 .userinfo {
   background-color: #E6EAF3;
   position: fixed;
@@ -350,7 +352,16 @@ footer {
   width: 100%;
   overflow: scroll;
 }
-
+.mypageheader {
+  position: fixed;
+  width: 100%;
+  height: 7%;
+}
+.mypagecontents {
+  margin-top: 50px;
+  overflow: scroll;
+}
+/*user end*/
 .writeform {
   background-color: #E6EAF3;
   position: fixed;
