mypage part -1.function user add settingbutton -2.bookmark,managepage listclick repair

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -359,6 +359,9 @@ footer {
 }
 .mypagecontents {
   margin-top: 50px;
+  position: fixed;
+  height: 100%;
+  width: 100%;
   overflow: scroll;
 }
 /*user end*/
