--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -114,8 +114,9 @@ footer {
 
 #name {
   width: 100%;
+  padding-bottom: 6px;
   border: none;
-  font-size: 20px;
+  font-size: 22px;
   border: solid 1px #ababab;
 }
 #url{
@@ -177,9 +178,11 @@ footer {
   margin-bottom: 30px;
 }
 
+
 .underline{
   width: 100%;
   color: black;
+  margin-bottom: 5px;
 }
 /* login end */
 
