--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -423,22 +423,27 @@ footer {
 .company_list{
   height: 40px;
   border: 1px solid #434343;
-  border-radius: .25em;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-top: 20px;
-  font-size: large;
+  width:calc(100% - 110px);
+  line-height:50px;
+  padding:0px 10px;
+  margin-right:20px;
 }
+
 /*company_basic_list end*/
 
 /*User_list start*/
+
 .User_list{
   height: 40px;
   border: 1px solid #434343;
-  border-radius: .25em;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-top: 20px;
-  font-size: large;
+  width:calc(100% - 110px);
+  line-height:50px;
+  padding:0px 10px;
+  margin-right:20px;
+}
+
+.search{
+  padding:0px 10px;
 }
 /*User_list end*/
+
