--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -395,20 +395,6 @@ footer {
   border: 0;
 }
 
-.idsearchModal{
-  position: absolute;
-  top: 20px;
-  left: 40%;
-  z-index: 99999999;
-}
-
-.pwsearchModal{
-  position: absolute;
-  top: 20px;
-  left: 40%;
-  z-index: 99999999;
-}
-
 .idoverlapcheck{
   position: absolute;
   top: 20px;
@@ -423,6 +409,60 @@ footer {
   z-index: 99999999;
 }
 
+/* Modal start*/
+.idsearchModal{
+  position: absolute;
+  top: 20px;
+  left: 40%;
+  z-index: 99999999;
+}
+
+.pwsearchModal{
+  position: absolute;
+  top: 20px;
+  left: 40%;
+  z-index: 99999999;
+}
+
+.info_delete_modal{
+  position: absolute;
+  top: 20px;
+  left: 40%;
+  z-index: 99999999;
+}
+.Modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.Modal1 {
+  position: absolute;
+  border: 5;
+  border-radius: 10;
+  width: 400;
+  height: 400;
+  padding: 40px;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+}
+#modalCloseBtn{
+  position: absolute;
+  top: 5px;
+  right: 1px;
+  border: none;
+  color: rgba(0, 0, 0, 0.7);
+  background-color: transparent;
+  font-size: 20px;
+}
+/* Modal end*/
 /*info_delete start*/
 .info_delete {
   position: absolute;
